@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-61
+2016-12-16 David Schneider
+- update to pdsdata 8.7.0 for JungFrau detector
+
 Tag: V00-02-60
 2016-11-10 David Schneider
 -  update to pdsdata 8.6.18 for ControlsCameraConfig
